# just-run

./: Cargo.toml  README.md  flake.nix  justfile
crates/just-run/: Cargo.toml
crates/just-run/src/: lib.rs
